fix table new view on mobile

--- a/src/sass/lot-page.scss
+++ b/src/sass/lot-page.scss
@@ -90,32 +90,6 @@
         &-img {
             height: 422px;
         }
-        .slick-dotted.slick-slider {
-            margin-bottom: 0;
-        }
-        .slick-dots {
-            display: flex;
-            width: auto;
-            position: relative;
-            bottom: 0;
-            margin: 0 25px;
-            li {
-                width: 8px;
-                height: 8px;
-                border-radius: 50%;
-                background-color: #EDEDED;
-                margin: 0;
-                &.slick-active {
-                    background-color: $active-color;
-                }
-                button {
-                    display: none;
-                }
-            }
-            li + li {
-                margin: 0 0 0 5px;
-            }
-        }
         .slick-prev,
         .slick-next {
             top: 0;
@@ -176,39 +150,6 @@
 }
 
 
-button.slick-prev,
-button.slick-next{
-    width: 40px;
-    height: 40px;
-    background-color: #F6F6F6;
-    border-radius: 50%;
-    transform: none;
-    &:before {
-        background: none;
-        background-color: transparent;
-        content: '';
-        display: block;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-repeat: no-repeat;
-        background-position: 50% 50%;
-        background-size: 20px 20px;
-        background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.2357 5L13 5.80292L8.49044 10.5L13 15.1971L12.2357 16L7 10.5L12.2357 5Z' fill='%2332325D'/%3E%3C/svg%3E%0A");
-    }
-    &:hover,
-    &:active,
-    &:focus {
-        background-color: $active-color;
-        &:before {
-            background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.2357 5L13 5.80292L8.49044 10.5L13 15.1971L12.2357 16L7 10.5L12.2357 5Z' fill='%23ffffff'/%3E%3C/svg%3E%0A");
-        }
-    }
-}
-button.slick-next {
-    transform: rotate(180deg);
-}
 
 @media (max-width: 1539px) {
     .lot-page__body {
